--- a/chat.css
+++ b/chat.css
@@ -57,15 +57,6 @@
   margin-left: 50px;
 }
 
-.message.send .message-avatar {
-  float: right;
-}
-
-.message.send .message-content-container {
-  text-align: right;
-  margin-right: 50px;
-}
-
 .message.receive .message-content::before {
   width: 0;
   height: 0;
@@ -98,6 +89,24 @@
   z-index: 3;
 }
 
+.message.receive .message-content {
+  background-color: #fff;
+}
+
+.message.send .message-avatar {
+  float: right;
+}
+
+.message.send .message-content-container {
+  text-align: right;
+  margin-right: 50px;
+}
+
+.message.send .message-content {
+  background-color: #53A9FF;
+  color: #fff;
+}
+
 .message.send .message-content::before {
   width: 0;
   height: 0;
@@ -119,7 +128,7 @@
   height: 0;
   content: '';
   z-index: 2;
-  border-left: 7.5px solid #fff;
+  border-left: 7.5px solid #53A9FF;
   border-bottom: 5px solid transparent;
   border-top: 5px solid transparent;
 
